--- a/vote-web/src/index.css
+++ b/vote-web/src/index.css
@@ -18,6 +18,11 @@ body {
   background-size: cover;
   background-position: center;
 }
+.send-icon {
+  background-image: url("../public/send.png");
+  background-size: cover;
+  background-position: center;
+}
 
 @layer components {
   .f-c-c {
